# template-rs-wasm

./: .gitpod.yml  Cargo.toml  README.md  Trunk.toml  index.html  package.json
.github/: dependabot.yml
.github/workflows/: docker.yml  rust.yml
public/: index.html
src/: lib.rs
src/actors/: mod.rs
src/core/: application.rs  mod.rs
