[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = []
description = "template-rs-wasm"
keywords = ["wasm"]
edition = "2021"
license = "Apache-2.0"
name = "template-rs-wasm"
version = "0.1.0"

[features]
default = ["core"]
full = ["core"]

core = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]
# substrate-wasm-builder = "4.0.0"
yew = "0.20.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[dependencies]
dotenv_codegen = "0.15.0"
futures = "0.3.24"
gloo = "0.8.0"
js-sys = "0.3.60"
lazy_static = "1.4.0"
log = "0.4.17"
lru = "0.8.1"
parking_lot = "0.12.1"
pulldown-cmark = "0.9.2"
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = { features = ["macros"], version = "1.22.0" }
wasm-bindgen = { features = ["serde-serialize"], version = "0.2.83" }
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
# wee_alloc = { optional = true, version = "0.4.5" } # unmaintained

yew = "0.20.0"
yew-hooks = "0.2.0"
yew-router = "0.17.0"

[dependencies.web-sys]
features = [
    "Client",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Headers",
    "Node",
    "Request", 
    "RequestInit", 
    "RequestMode", 
    "Response", 
    "Window",
    "console"
]
 version = "0.3.60"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = 'unwind'
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = 'unwind'
rpath = false
opt-level = 'z'
overflow-checks = false